Corrige errores en el modulo de autenticación
